<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="@dimen/main_activity_padding_x"
    android:paddingVertical="@dimen/main_activity_padding_y"
    tools:context=".StartFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_am_mouse_count"/>
    <TextView
        android:id="@+id/tv_mouse_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/sb_mouse_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        android:progress="0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_am_mouse_speed"/>
    <TextView
        android:id="@+id/tv_mouse_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/sb_mouse_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="900"
        android:progress="200"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_am_mouse_size"/>
    <TextView
        android:id="@+id/tv_mouse_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/sb_mouse_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        android:progress="0"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_activity_padding_y"
        android:text="@string/btn_am_start"/>
    <Button
        android:id="@+id/btn_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_am_stats"/>
</LinearLayout>